--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -107,7 +107,7 @@ a:hover {
     object-fit: cover;
     height: 100%;
     width: 100%;
-    border-radius: 2px;
+    /* border-radius: 2px; */
     margin: 2px;
 }
 
@@ -187,7 +187,7 @@ a:hover {
 }
 
 .small-right, .small-left {
-    margin-top: 5px;
+    margin-top: 3px;
 }
 
 .small-left {
