--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -270,7 +270,6 @@ p.right {
 
 .cv-img {
     width: 100%;
-    height: 500px;
     object-fit: scale-down;
     background: #000;
 }
@@ -294,6 +293,10 @@ hr {
 
 .text-muted {
     color: #888;
+}
+
+.text-italic {
+    font-style: italic;
 }
 
 .footer {
